objects/Part_Selector_Conductor_OD__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Compact_Diameter__c</fullName>
        <label>Compact Diameter (Inch)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Compressed_Diameter__c</fullName>
        <label>Compressed Diameter (Inch)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concentric_Diameter__c</fullName>
        <label>Concentric Diameter(Inch)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Part Selector Conductor OD</label>
</CustomObject>